LIST OF CHANGES
---------------

release 64.0.0
 - add bwa_mem2 flag to options.pm to allow override of default bwa analyses at pipeline invocation
 - update seq_alignment to recognise the bwa_mem2 flag and also default to bwa_mem2 for NovaSeqX platform

release 63.3.0
 - force no_target_alignment for haplotag libraries

release 63.2.0
 - Adapt the pipeline to load a syslog dispatcher file for npg_publish_tree

release 63.1.0
 - add configuration and functionality to support filtering and appending
   irods error log messages to syslog.

release 63.0.0
 - removed pp_archiver from the function graph.
 - removed scripts for CLIMB data maintenance
 - add haplotag QC check

release 62.2.0
 - CI
   - update version of github actions
   - change CI runner from Ubuntu 18.04 to ubuntu-latest
 - run deletion:
     accounted for a potential human split for GBS runs and lanes where
       a primer panel is set,
     when pp files are  missing on staging, error message extended with info 
       about a product

release 62.1.0
 - allow non consented human split for GBS runs
 - allow analysis of single-end runs with non-consented human split

release 62.0.4
 - fix tag 888 bug in force markdup_method:samtools for single-end runs

release 62.0.3
 - always use markdup_method:samtools in stage2 analysis for single-end runs

release 62.0.2
 - Adjust bam_flagstats QC check invocation in seq_alignment for nonconsented
   human split and XA/Y human splits
     nchs: always use --skip_markdup_metrics
     XA/Y splits: use --skip_markdup_metrics in the same way as the target subset

release 62.0.1
 - Prevent the file glob expansion by the shell when calling a loader
   for the run parameters XML file. A non-existing file might be passed
   to the loader.

release 62.0.0
 - Add substitution metrics to the seq alignment command.
 - Removed provisions for loading the old warehouse, the function
   for loading the old warehouse was removed some time ago.