@@ -4,6 +4,7 @@ LIST OF CHANGES
 release 64.0.0
  - add bwa_mem2 flag to options.pm to allow override of default bwa analyses at pipeline invocation
  - update seq_alignment to recognise the bwa_mem2 flag and also default to bwa_mem2 for NovaSeqX platform
+ - remove wr limit of p4s1 to specific flavor
 
 release 63.3.0
  - force no_target_alignment for haplotag libraries
